# inchi_ios_android

./: .gitignore  README.md
INCHI-1-SRC/INCHI_BASE/src/: ichicano.c  util.c
InchiAndroid/: .gitmodules  README.md
InchiAndroid/app/: CMakeLists.txt  build.gradle
InchiAndroid/app/src/androidTest/java/com/acidblob/luainchiandroid/: ExampleInstrumentedTest.java
InchiAndroid/app/src/main/: AndroidManifest.xml
InchiAndroid/app/src/main/cpp/: native-lib.cpp
InchiAndroid/app/src/main/java/com/acidblob/luainchiandroid/: MainActivity.java
InchiAndroid/app/src/main/res/values/: strings.xml
InchiAndroid/app/src/test/java/com/acidblob/luainchiandroid/: ExampleUnitTest.java
InchiAndroid/gradle/wrapper/: gradle-wrapper.properties
inchi.xcodeproj/: project.pbxproj
libinchi-static-ios/: fat.sh
lua-inchi/: lua_inchi.cpp
mol2inchi/: main.c
